--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "code-x-landing"
 compatibility_date = "2024-01-15"
+pages_build_output_dir = "out"
 
 [env.production]
 name = "code-x-landing"
@@ -10,7 +11,6 @@ name = "code-x-landing-preview"
 # Build configuration for Next.js
 [build]
 command = "npm run pages:build"
-publish = "out"
 
 # Environment variables (add your secrets here)
 # [env.production.vars]
