--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@ name = "code-x-landing"
 compatibility_date = "2024-01-15"
 pages_build_output_dir = "out"
 
+# Production environment configuration
 [env.production]
 name = "code-x-landing"
 
