--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,7 +17,7 @@ name = "code-x-landing-preview"
 # [env.production.vars]
 # NEXT_PUBLIC_ANALYTICS_ID = "your-analytics-id"
 
-# Custom domains (add your domains here)
-# [[routes]]
-# pattern = "code-x.app"
-# zone_name = "your-domain.com"
+# Custom domains configuration
+[[routes]]
+pattern = "code-x.app/*"
+zone_name = "code-x.app"
