--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 # Cloudflare Pages-friendly configuration
 compatibility_date = "2024-01-15"
 # This configuration is optimized for Pages deployment
+# Last updated: 2024-09-23
 
 # Build settings are configured in Cloudflare Pages dashboard:
 # Build command: npm run pages:build
