Add blog post: Warm Wallet Security Architecture with references

--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "pages:build": "next build",
-    "pages:dev": "next dev",
-    "deploy": "npm run pages:build && wrangler pages publish out"
+    "lint": "eslint"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
